Fixed bug #21708 (ucfirst() trouble again)

# this bug is related to bug #21689